# os-terminal-bare

./: Cargo.toml
src/: main.rs
src/backends/: fbdev.rs  mod.rs
