[package]
name = "os-terminal-bare"
version = "0.1.0"
edition = "2024"

[features]
default = ["fbdev"]
fbdev = []

[profile.release]
lto = "thin"
opt-level = "z"

[dependencies]
anyhow = "1.0.101"
evdev = "0.13.2"
os-terminal = { version = "0.7.0", features = ["truetype"] }
linuxfb = "0.3.1"
memmap = "0.7.0"
thiserror = "2.0.18"
keycode = "1.0.0"

[dependencies.nix]
version = "0.31.1"
features = ["term", "process", "fs"]
